--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <div class="bordas">
         <footer>
-            <a></a>
-            <a></a>
-            <a></a>
+            <a onclick="save()">save</a>
+            <a onclick="load()">load</a>
+            <a> </a>
         </footer>
     </div>
     <script src="./js/scriptsbase.js"></script>
