mensagens para de atualização do jogador
pequeno Log de mensagens incluído no jogo, tendo no total 6 mensagens possáveis de aparecer até agora, elas apareceram enquanto o jogador ganhar mais pontos.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,21 @@
     </div>
 
     <button onclick="acao()">Acionar</button>
+    <!-- <button class="botao_decoracao"></button> -->
+
+    <div class="mensagens_centro" id="mensagens_centro">
+        
+    </div>
 
     <div class="bordas">
         <footer>
-            <a onclick="save()">save</a>
-            <a onclick="load()">load</a>
+            <div class="savegame">
+                <a onclick="save()">save</a>
+                <a onclick="load()">load</a>
+                <a onclick="reset()">reset</a>
+            </div>
+            <a> </a>
+            <a> </a>
             <a> </a>
         </footer>
     </div>
