log de mensagens, atualização para jogador pt2

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <button onclick="acao()">Acionar</button>
     <!-- <button class="botao_decoracao"></button> -->
 
-    <div class="mensagens_centro" id="mensagens_centro">
-        
-    </div>
+    <div class="mensagens_centro" id="mensagens_centro"></div>
 
     <div class="bordas">
         <footer>
